# storage/api-docs/api-docs.json
@@ -2,6 +2,14 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Authentication API",
+        "contact": {
+            "name": "Your API Team",
+            "email": "contact@yourapi.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0"
     },
     "paths": {
@@ -102,6 +110,9 @@
                     },
                     "401": {
                         "description": "Invalid credentials"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -136,12 +147,7 @@
                     "200": {
                         "description": "Successful operation"
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             },
             "post": {
                 "tags": [
@@ -176,7 +182,12 @@
                     "422": {
                         "description": "Validation error"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/departments/{id}": {
@@ -256,7 +267,12 @@
                     "404": {
                         "description": "Department not found"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -279,6 +295,9 @@
                     "204": {
                         "description": "Department deleted successfully"
                     },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "404": {
                         "description": "Department not found"
                     }
@@ -288,6 +307,15 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     },
